--- a/cart.html
+++ b/cart.html
@@ -149,6 +149,6 @@ https://cdn.jsdelivr.net/npm/vue-loading-overlay@6.0.3/dist/css/index.min.css
 <script src="https://cdn.jsdelivr.net/npm/@vee-validate/rules@4.12.4/dist/vee-validate-rules.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@vee-validate/i18n@4.12.4/dist/vee-validate-i18n.min.js"></script>
 
-<script src="/JS/cart.js" type="module"></script>
+<script src="./JS/cart.js" type="module"></script>
 </body>
 </html>
